--- a/src/flaskr/app/templates/explore.html
+++ b/src/flaskr/app/templates/explore.html
@@ -111,6 +111,15 @@
 
 <script>
     var numTexts;
+    var sentiment_colors = {
+        'anger'      : 'red',
+        'fear'       : 'gray',
+        'joy'        : 'yellow',
+        'sadness'    : 'blue',
+        'analytical' : 'green',
+        'confident'  : 'orange',
+        'tentative'  : 'purple'
+    }
 
     $( document ).ready(function () {
         $.ajax({
@@ -178,7 +187,6 @@
                         }
                     }
                 }
-                alert("success");
             },
             error: () => {
                 alert("error");
@@ -240,7 +248,7 @@
     <div class="card text-center" style="width: 18rem;">
       <div class="card-body">
         <div class="holder" ondragover="allowDrop(event)" ondrop="drop(event)" data-group="0" data-t="0">
-            <p id="label0" class="btn btn-dark" draggable="true" ondragstart="drag(event)" data-group="0">
+            <p id="label0" class="btn btn-primary" draggable="true" ondragstart="drag(event)" data-group="0">
                 Text 1
             </p>
         </div>
@@ -252,7 +260,7 @@
     <div class="card text-center" style="width: 18rem;">
       <div class="card-body">
         <div class="holder" ondragover="allowDrop(event)" ondrop="drop(event)" data-group="0" data-t="1">
-            <p id="label1" class="btn btn-dark" draggable="true" ondragstart="drag(event)" data-group="0">
+            <p id="label1" class="btn btn-primary" draggable="true" ondragstart="drag(event)" data-group="0">
                 Text 2
             </p>
         </div>
@@ -264,7 +272,7 @@
     <div class="card text-center" style="width: 18rem;">
       <div class="card-body">
         <div class="holder" ondragover="allowDrop(event)" ondrop="drop(event)" data-group="0" data-t="2">
-            <p id="label2" class="btn btn-dark" draggable="true" ondragstart="drag(event)" data-group="0">
+            <p id="label2" class="btn btn-primary" draggable="true" ondragstart="drag(event)" data-group="0">
                 Text 3
             </p>
         </div>
@@ -278,7 +286,7 @@
     <div class="card text-center" style="width: 18rem;">
       <div class="card-body">
         <div class="holder" ondragover="allowDrop(event)" ondrop="drop(event)" data-group="0" data-t="3">
-            <p id="label3" class="btn btn-dark" draggable="true" ondragstart="drag(event)" data-group="0">
+            <p id="label3" class="btn btn-primary" draggable="true" ondragstart="drag(event)" data-group="0">
                 Text 4
             </p>
         </div>
@@ -290,7 +298,7 @@
     <div class="card text-center" style="width: 18rem;">
       <div class="card-body">
         <div class="holder" ondragover="allowDrop(event)" ondrop="drop(event)" data-group="0" data-t="4">
-            <p id="label4" class="btn btn-dark" draggable="true" ondragstart="drag(event)" data-group="0">
+            <p id="label4" class="btn btn-primary" draggable="true" ondragstart="drag(event)" data-group="0">
                 Text 5
             </p>
         </div>
@@ -302,7 +310,7 @@
     <div class="card text-center" style="width: 18rem;">
       <div class="card-body">
         <div class="holder" ondragover="allowDrop(event)" ondrop="drop(event)" data-group="0" data-t="5">
-            <p id="label5" class="btn btn-dark" draggable="true" ondragstart="drag(event)" data-group="0">
+            <p id="label5" class="btn btn-primary" draggable="true" ondragstart="drag(event)" data-group="0">
                 Text 6
             </p>
         </div>
